--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "@prisma/client": "^4.11.0",
-    "fastify": "^4.14.0"
+    "fastify": "^4.14.0",
+    "zod": "^3.20.6"
   }
 }
