--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "node": "18"
   },
   "scripts": {
-    "dev": "tsx src/server.ts"
+    "dev": "tsx src/server.ts",
+    "build": "tsup src" 
   },
   "repository": {
     "type": "git",
