feat: start script

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "scripts": {
     "dev": "tsx src/server.ts",
-    "build": "tsup src" 
+    "build": "tsup src",
+    "start": "node dist/server.js"
   },
   "repository": {
     "type": "git",
